client/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  font-family: "Exo 2", sans-serif;
  color: aliceblue;
}

body{
  background: black;
}

form{
  display: flex;
  flex-direction: column;
  align-items: center;
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

@keyframes fillUp {
  0% {
      transform: translateY(100%);
  }
  100% {
      transform: translateY(0%);
  }
}

.background {
  pointer-events: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background: linear-gradient(to top, #00609463 0%, #0096c7 100%);
  overflow: hidden;
  animation: fillUp 3s ease forwards;
}


.background-static {
  pointer-events: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  justify-content: flex-start;
  background: linear-gradient(to top, #00609463 0%, #0096c7 100%);
  overflow: hidden;
}

.background-static-home {
  pointer-events: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  justify-content: flex-start;
  background: linear-gradient(to top, #00609463 0%, #0096c7 100%);
  overflow: hidden;
}

.form-container{
  pointer-events: auto;
  position: relative;
  width: 300px; /* Fixed width */
  padding: 20px;
  border-radius: 8px; /* Rounds corners */
  margin: 20px 0; /* Adds vertical margin */
  animation: fadein 2s ease-out forwards;
}

.form-container-2{
  pointer-events: auto;
  position: absolute;
  top: 50%; /* Center vertically */
  left: 50%; /* Center horizontally */
  transform: translate(-50%, -50%); /* Adjust position to the exact center */
  width: 300px; /* Fixed width */
  padding: 20px;
  border-radius: 8px; /* Rounds corners */
  margin: 20px 0; /* Adds vertical margin */
  z-index: 2;
  animation: fadein 2s ease-out forwards;
}

@keyframes moveWave {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-1000px);
  }
}


@keyframes bubbleAnimation {
  0% {
      bottom: -10px; 
  }
  100% {
      bottom: 110%;
  }
}

.bubble {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.6);
  border-radius: 50%;
  animation: bubbleAnimation 10s linear infinite;
  animation-delay: 0s;
}

a:visited{
  color: pink;
}
a:hover{
  color: purple;
}

input{
  border-radius: 8px;
  padding: 10px;
  border-style: hidden;
  background-color: #d8d8d8;
  font-family: "Exo 2", sans-serif;
  font-size:medium;
}

input:focus{
  background-color: #f6f6f6;
}

input:hover{
  background-color: #f6f6f6;
}

button{
  border-radius: 8px;
  padding: 8px;
  border-style: hidden;
  background-color: #d8d8d8;
  font-family: "Exo 2", sans-serif;
  text-align: center;
  font-size:small;
}

button:hover{
  background-color: #f6f6f6;
}

.App-header {
  width: 100%;
  height: 30%; /* Adjusted to auto to accommodate the logo's height */
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  padding-top: 5%;
}

@keyframes pulsate {
  0%, 100% {
    transform: translateY(0) rotate(0deg);  
  }
  25%, 75% {
    transform: translateY(-35px) rotate(5deg); 
  }
  50% {
    transform: translateY(0) rotate(-5deg); 
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.App-logo {
  pointer-events: none;
  height: 500px; /* Maintains the aspect ratio */
  width: 500px; /* Adjust according to the size you want for your logo */
  z-index: 1;
  animation: pulsate 8s infinite ease-in-out, fadein 5s ease-out forwards;
}

.App-logo-2 {
  pointer-events: none;
  height: 500px; /* Maintains the aspect ratio */
  width: 500px; /* Adjust according to the size you want for your logo */
  z-index: 1;
  animation: pulsate 8s infinite ease-in-out;
}

